crates/tych/src/tests/snapshots/array_lit_reassign.snap
---
source: crates/tych/src/tests.rs
assertion_line: 651
expression: "(test[1], res)"
---
- "\nlet x: [int; 3] = [1, 2, 3]\nx = [4, 5, 6]\n"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn:
              SArray:
                - Int32
                - 3
            init:
              kind:
                Lit:
                  value:
                    Array:
                      elements:
                        - kind:
                            Lit:
                              value:
                                Int32: 1
                              ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 2
                              ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 3
                              ty: Int32
                      inner_ty: Int32
                  ty:
                    SArray:
                      - Int32
                      - 3
      - kind:
          BinOp:
            op: Assign
            lhs:
              kind:
                Ident:
                  name: x
                  ty:
                    SArray:
                      - Int32
                      - 3
            rhs:
              kind:
                Lit:
                  value:
                    Array:
                      elements:
                        - kind:
                            Lit:
                              value:
                                Int32: 4
                              ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 5
                              ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 6
                              ty: Int32
                      inner_ty: Int32
                  ty:
                    SArray:
                      - Int32
                      - 3
            ty: Void

