crates/tych/src/tests/snapshots/array_type.snap
---
source: crates/tych/src/tests.rs
assertion_line: 651
expression: "(test[1], res)"
---
- "let x: [int; 3]"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn:
              SArray:
                - Int32
                - 3
            init: ~

