crates/tych/src/tests/snapshots/binop_bad_cmp_type.snap
---
source: crates/tych/src/tests.rs
assertion_line: 154
expression: "(test[1], res)"
---
- "\nfn main(x: int) {\n    true > true\n}\n"
- Err: "Invalid type combination found in `>` operation: (lhs: `bool`, rhs: `bool`)"

