crates/tych/src/tests/snapshots/binop_bad_math_types.snap
---
source: crates/tych/src/tests.rs
assertion_line: 154
expression: "(test[1], res)"
---
- "\nfn main(x: int) {\n    true + false\n}\n"
- Err: "Invalid type combination found in `+` operation: (lhs: `bool`, rhs: `bool`)"

