crates/tych/src/tests/snapshots/binop_basic.snap
---
source: crates/tych/src/tests.rs
assertion_line: 153
expression: "(test[1], res)"
---
- "\nfn foo() {\n    1 + 2\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Add
                          lhs:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          rhs:
                            kind:
                              Lit:
                                value:
                                  Int32: 2
                                ty: Int32
                          ty: Int32
                  ty: Int32

