crates/tych/src/tests/snapshots/binop_bool_ret.snap
---
source: crates/tych/src/tests.rs
assertion_line: 152
expression: "(test[1], res)"
---
- "\nfn foo() -> bool {\n    2 == 1\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: "main::foo"
              args: []
              ret_ty: Bool
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Eq
                          lhs:
                            kind:
                              Lit:
                                value:
                                  Int32: 2
                                ty: Int32
                          rhs:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          ty: Bool
                  ty: Bool

