crates/tych/src/tests/snapshots/binop_bools_cmp_1.snap
---
source: crates/tych/src/tests.rs
assertion_line: 153
expression: "(test[1], res)"
---
- "\nfn main(x: int) {\n    true || false\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: main
              args:
                - - x
                  - Int32
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Or
                          lhs:
                            kind:
                              Lit:
                                value:
                                  Bool: true
                                ty: Bool
                          rhs:
                            kind:
                              Lit:
                                value:
                                  Bool: false
                                ty: Bool
                          ty: Bool
                  ty: Bool

