crates/tych/src/tests/snapshots/binop_bools_cmp_2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 153
expression: "(test[1], res)"
---
- "\nfn main(x: bool) {\n    x == false\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: main
              args:
                - - x
                  - Bool
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Eq
                          lhs:
                            kind:
                              Ident:
                                name: x
                                ty: Bool
                          rhs:
                            kind:
                              Lit:
                                value:
                                  Bool: false
                                ty: Bool
                          ty: Bool
                  ty: Bool

